# hms-nut

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_QUALITY_ANALYSIS.md  Dockerfile  HTTP_SERVER_BLOCKING_FIX.md  LICENSE  README.md  docker-compose.yml  hms-nut.service.example  llm_prompt.txt
.github/workflows/: docker-build.yml
docs/: DOCKER_GHCR.md  FIX_VERIFICATION.md  IMPLEMENTATION_REPORT.md  MEMORY_DEADLOCK_ANALYSIS.md
include/database/: DatabaseService.h
include/mqtt/: DiscoveryPublisher.h  MqttClient.h
include/nut/: NutClient.h  UpsData.h
include/services/: CollectorService.h  DailySummaryService.h  NutBridgeService.h
include/utils/: DeviceMapper.h
src/: main.cpp
src/database/: DatabaseService.cpp
src/mqtt/: DiscoveryPublisher.cpp  MqttClient.cpp
src/nut/: NutClient.cpp  UpsData.cpp
src/services/: CollectorService.cpp  DailySummaryService.cpp  NutBridgeService.cpp
src/utils/: DeviceMapper.cpp
tests/: CMakeLists.txt  test_async_subscriptions.cpp  test_daily_summary.cpp  test_daily_summary_e2e.cpp  test_device_mapper.cpp  test_ha_status_subscription.cpp  test_http_endpoints.cpp  test_nut_bridge_republish.cpp  test_ups_data.cpp
